Intellij code cleanup